# wengwengweng

[package]
name = "packapp"
description = "pack a binary to MacOS .app bundle"
version = "0.2.0"
authors = ["tga <tga@wengwengweng.me>"]
repository = "https://github.com/slmjkdbtl/DIRTY"
license = "Zlib"
edition = "2018"
readme = "README.md"
exclude = ["TODO"]

[dependencies]
structopt = "0.3"
fs_extra = "1.1"
plist = "0.5"
serde = { version = "1.0", features = [ "derive", ] }

