# wengwengweng

[package]
name = "packapp"
description = "pack a binary to a MacOS .app bundle"
version = "0.3.0"
authors = ["tga <tga@enemyspy.xyz>"]
repository = "https://git.sr.ht/~slmjkdbtl/packapp"
license = "Zlib"
edition = "2018"
readme = "README.md"
exclude = ["TODO"]

[dependencies]
argh = "0.1"
fs_extra = "1.1"
plist = "1.0"
serde = { version = "1.0", features = [ "derive", ] }

